@@ -1,9 +1,9 @@
 Package: memisc
 Type: Package
 Title: Tools for Management of Survey Data and the Presentation of Analysis Results
-Version: 0.99.2
-Date: 2016-01-04
-Author: Martin Elff (with contributions by Christopher N. Lawrence, Dave Atkins, Jason W. Morgan, Achim Zeileis)
+Version: 0.99.3
+Date: 2016-01-16
+Author: Martin Elff (with contributions from Christopher N. Lawrence, Dave Atkins, Jason W. Morgan, Achim Zeileis)
 Maintainer: Martin Elff <memisc@elff.eu>
 Description: One of the aims of this package is to make life easier for
         useRs who deal with survey data sets. It provides an
